WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
322154
[AppKit Gestures] App exposé gesture should not trigger pull to refresh
https://bugs.webkit.org/show_bug.cgi?id=322154
Summary
[AppKit Gestures] App exposé gesture should not trigger pull to refresh
Abrar Rahman Protyasha
Reported
2026-08-19 19:19:10 PDT
rdar://185377037
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2026-08-19 19:42:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/71997
EWS
Comment 2
2026-08-19 23:45:12 PDT
Committed
319506@main
(2481e6a653a3): <
https://commits.webkit.org/319506@main
> Reviewed commits have been landed. Closing PR #71997 and removing active labels.
EWS
Comment 3
2026-08-27 19:25:53 PDT
Committed
316606.544@safari-7625-branch
(57fff799d7d4): <
https://commits.webkit.org/316606.544@safari-7625-branch
> Reviewed commits have been landed. Closing PR #6501 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug