Source/WebKit/UIProcess/mac/WebViewImpl.h
@@ -255,6 +255,10 @@ enum class PDFAccessibilityDisplayModeState : uint8_t;
 enum class UndoOrRedo : bool;
 enum class WebEventPhase : uint8_t;
 
+#if HAVE(NSREFRESHCONTROLLER)
+enum class RefreshControllerEligibility : bool { Ineligible, Eligible };
+#endif
+
 typedef id <NSValidatedUserInterfaceItem> ValidationItem;
 typedef Vector<RetainPtr<ValidationItem>> ValidationVector;
 typedef HashMap<String, ValidationVector> ValidationMap;
@@ -909,7 +913,7 @@ public:
     bool refreshControllerIsTracking() const { return m_refreshControllerIsTracking; }
     void clearRefreshControllerTracking() { m_refreshControllerIsTracking = false; }
     void updateRefreshControllerForWheelEvent(NSEvent *);
-    void updateRefreshControllerForPanGesture(NSGestureRecognizerState);
+    void updateRefreshControllerForPanGesture(NSGestureRecognizerState, RefreshControllerEligibility);
     void updateRefreshControllerFrame();
     void topScrollStretchDidChange(CGFloat topScrollStretch);
 #endif
